--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "@types/react-redux": "^5.0.9",
     "axios": "^0.16.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "~16.0.0",
+    "react-dom": "~16.0.0",
     "react-redux": "^5.0.6",
-    "react-scripts-ts": "2.7.0",
+    "react-scripts-ts": "^2.7.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
@@ -22,6 +22,6 @@
     "@types/jest": "^20.0.8",
     "@types/node": "^8.0.28",
     "@types/react": "^16.0.5",
-    "@types/react-dom": "^15.5.4"
+    "@types/react-dom": "^16.0.2"
   }
 }
