--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.6",
     "react-scripts-ts": "^2.7.0",
     "redux": "^3.7.2",
+    "redux-persist": "^4.10.1",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
@@ -21,7 +22,7 @@
   "devDependencies": {
     "@types/jest": "^20.0.8",
     "@types/node": "^8.0.28",
-    "@types/react": "^16.0.5",
+    "@types/react": "16.0.16",
     "@types/react-dom": "^16.0.2"
   }
 }
