--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,4 @@ jobs:
       - run: npm run build
       - add_ssh_keys
       - deploy:
-<<<<<<< Updated upstream
-          command: cd ~/repo/build && git init && git config --local user.name "Horus" && git config --local user.email "me@adrianabreu.com" && git add . && git commit -m "New release" && git push -f git@github.com:adrianabreu/chuck-norris-react-redux-client.git gh-pages
-=======
-          command: cd ~/repo/build && git init && git config --local user.name "Horus" && git config --local user.email "me@adrianabreu.com" && git add . && git commit -m "New release" && git push -f -u git@github.com:adrianabreu/chuck-norris-react-redux-client.git master:gh-pages
->>>>>>> Stashed changes
+          command: cd ~/repo/build && git init && git config --local user.name "Horus" && git config --local user.email "me@adrianabreu.com" && git add . && git commit -m "New release" && git push -f -u git@github.com:adrianabreu/chuck-norris-react-redux-client.git gh-pages
