--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,4 +30,4 @@ jobs:
       - run: npm run build
       - add_ssh_keys
       - deploy:
-          command: cd ~/repo/build && git init && git config --local user.name "Horus" && git config --local user.email "me@adrianabreu.com" && git add . && git commit -m "New release" && git push -f -u git@github.com:adrianabreu/chuck-norris-react-redux-client.git gh-pages
+          command: cd ~/repo/build && git init && git checkout -b gh-pages && git config --local user.name "Horus" && git config --local user.email "me@adrianabreu.com" && git add . && git commit -m "New release" && git push -f -u git@github.com:adrianabreu/chuck-norris-react-redux-client.git gh-pages
