--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,3 +31,7 @@ jobs:
       - add_ssh_keys
       - deploy:
           command: cd ~/repo/build && git init && git checkout -b gh-pages && git config --local user.name "Horus" && git config --local user.email "me@adrianabreu.com" && git add . && git commit -m "New release" && git push -f -u git@github.com:adrianabreu/chuck-norris-react-redux-client.git gh-pages
+general:
+  branches:
+    only:
+      - master # list of branches to build
