--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-redux": "^5.0.9",
     "autoprefixer": "7.1.2",
     "axios": "^0.16.2",
+    "bootstrap": "^4.0.0-beta.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
