--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "test-cov": "node scripts/test.js --env=jsdom --coverage"
   },
   "devDependencies": {
     "@types/jest": "^20.0.8",
