--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/node": "^8.0.28",
     "@types/react": "16.0.16",
     "@types/react-dom": "^16.0.2",
+    "jest-junit": "^3.1.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6"
   },
