--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "chuck-norris-react-redux-client",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "homepage": "http://adrianabreu.com/chuck-norris-react-redux-client",
   "dependencies": {
-    "@types/react-redux": "^5.0.9",
+    "@types/react-redux": "5.0.12",
     "autoprefixer": "7.1.2",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "4.0.0-beta.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
@@ -20,22 +20,22 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
-    "react": "~16.0.0",
-    "react-dev-utils": "^4.0.1",
-    "react-dom": "~16.0.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-persist": "^4.10.1",
-    "redux-thunk": "^2.2.0",
-    "source-map-loader": "^0.2.1",
+    "react": "16.0.0",
+    "react-dev-utils": "4.2.1",
+    "react-dom": "16.0.0",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2",
+    "redux-persist": "4.10.1",
+    "redux-thunk": "2.2.0",
+    "source-map-loader": "0.2.3",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
-    "ts-jest": "^20.0.7",
-    "ts-loader": "^2.3.7",
-    "tslint": "^5.7.0",
-    "tslint-loader": "^3.5.3",
-    "tslint-react": "^3.2.0",
-    "typescript": "~2.5.3",
+    "ts-jest": "20.0.7",
+    "ts-loader": "3.1.1",
+    "tslint": "5.7.0",
+    "tslint-loader": "3.5.3",
+    "tslint-react": "3.2.0",
+    "typescript": "2.5.3",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
@@ -49,13 +49,13 @@
     "test-cov": "node scripts/test.js --env=jsdom --coverage"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.8",
-    "@types/node": "^8.0.28",
+    "@types/jest": "20.0.8",
+    "@types/node": "8.0.28",
     "@types/react": "16.0.20",
-    "@types/react-dom": "^16.0.2",
-    "jest-junit": "^3.1.0",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6"
+    "@types/react-dom": "16.0.2",
+    "jest-junit": "3.1.0",
+    "node-sass": "4.6.0",
+    "sass-loader": "6.0.6"
   },
   "jest": {
     "mapCoverage": true,
