--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "homepage": "http://adrianabreu.com/chuck-norris-react-redux-client",
   "dependencies": {
     "@types/react-redux": "5.0.12",
-    "autoprefixer": "7.1.2",
+    "@types/redux-persist": "^4.3.1",
+    "autoprefixer": "7.1.6",
     "bootstrap": "4.0.0-beta.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "css-loader": "0.28.4",
+    "chalk": "2.3.0",
+    "css-loader": "0.28.7",
     "dotenv": "4.0.0",
-    "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "html-webpack-plugin": "2.30.1",
+    "jest": "21.2.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -30,16 +31,16 @@
     "source-map-loader": "0.2.3",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
-    "ts-jest": "20.0.7",
+    "ts-jest": "21.1.4",
     "ts-loader": "3.1.1",
-    "tslint": "5.7.0",
+    "tslint": "5.8.0",
     "tslint-loader": "3.5.3",
     "tslint-react": "3.2.0",
-    "typescript": "2.5.3",
+    "typescript": "2.6.1",
     "url-loader": "0.5.9",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
-    "webpack-manifest-plugin": "1.2.1",
+    "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
@@ -49,8 +50,8 @@
     "test-cov": "node scripts/test.js --env=jsdom --coverage"
   },
   "devDependencies": {
-    "@types/jest": "20.0.8",
-    "@types/node": "8.0.28",
+    "@types/jest": "21.1.5",
+    "@types/node": "8.0.49",
     "@types/react": "16.0.20",
     "@types/react-dom": "16.0.2",
     "jest-junit": "3.1.0",
